[gd_scene load_steps=2 format=3 uid="uid://dy4ctmhwkgfm1"]

[ext_resource type="Script" uid="uid://cv06ljlt3gkyx" path="res://scripts/menus/StartMenu.gd" id="1_fb70i"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_fb70i")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.0
offset_right = 180.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SoloButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Solo"

[node name="MultiButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Multiplayer"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Quit"
